--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,5 @@ spring.datasource.username=user
 spring.datasource.password=password
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
 spring.jpa.hibernate.use-new-id-generator-mappings=false
-spring.jpa.hibernate.ddl-auto=create-drop
-log-format=$remote_addr ^- $remote_user ^[$time_local^] ^"$request^" $status $body_bytes_sent ^"$http_referer^" ^"$user_agent^" $upstream_time $response_time
+spring.jpa.hibernate.ddl-auto=create
+log-format=$remote_addr ^- $remote_user ^[$time_local^] ^"$request^" $http_referer $status $body_bytes_sent ^"$unknown^" ^"$user_agent^" ^"$http_x_forwarded_for^" $upstream_time $response_time
