--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/logsdb
+spring.datasource.url=jdbc:mysql://db:3306/logsdb
 spring.datasource.username=user
 spring.datasource.password=password
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
 spring.jpa.hibernate.use-new-id-generator-mappings=false
-spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.hibernate.ddl-auto=none
 log-format=$remote_addr ^- $remote_user ^[$time_local^] ^"$request^" $http_referer $status $body_bytes_sent ^"$unknown^" ^"$user_agent^" ^"$http_x_forwarded_for^" $upstream_time $response_time
