--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,5 @@ spring.datasource.username=user
 spring.datasource.password=password
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
 spring.jpa.hibernate.use-new-id-generator-mappings=false
+# '$' delineates the start of a dynamic variable, and '^' delineates the start of a static expression 
 log-format=$remote_addr ^- $remote_user ^[$time_local^] ^"$request^" $http_referer $status $body_bytes_sent ^"$unknown^" ^"$user_agent^" ^"$http_x_forwarded_for^" $upstream_time $response_time
